# scion-cpp-enet

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  Makefile  README.md  vcpkg.json
enet/: CMakeLists.txt
enet/demo/: main.cpp
enet/include/enet/: enet.h
examples/: CMakeLists.txt
examples/echo_udp/: main.cpp
examples/echo_udp_async/: main.cpp
examples/include/: console.cpp  console.hpp  format.cpp  format.hpp
examples/traceroute/: main.cpp
include/scion/: as_interface.hpp  bit_stream.hpp  error_codes.hpp  murmur_hash3.h
include/scion/addr/: address.hpp  endpoint.hpp  generic_ip.hpp  isd_asn.hpp
include/scion/asio/: addresses.hpp  scmp_socket.hpp  udp_socket.hpp
include/scion/bsd/: scmp_socket.hpp  sockaddr.hpp  socket.hpp  udp_socket.hpp
include/scion/daemon/: client.hpp  co_client.hpp
include/scion/details/: bit.hpp  debug.hpp  flags.hpp  protobuf_time.hpp
include/scion/drkey/: drkey.hpp
include/scion/extensions/: extension.hpp  idint.hpp
include/scion/hdr/: details.hpp  ethernet.hpp  idint.hpp  ip.hpp  proto.hpp  scion.hpp  scmp.hpp  udp.hpp
include/scion/path/: attributes.hpp  cache.hpp  decoded_scion.hpp  digest.hpp  path.hpp  path_meta.hpp  raw.hpp  raw_hop_range.hpp  shared_cache.hpp
include/scion/scmp/: handler.hpp
include/scion/socket/: header_cache.hpp  packager.hpp  parsed_packet.hpp
python/: build_grpc.sh  requirements.txt  tests.py
python/proto/control_plane/experimental/v1/: seg_detached_extensions_pb2.py  seg_detached_extensions_pb2.pyi  seg_detached_extensions_pb2_grpc.py
python/proto/control_plane/v1/: cppki_pb2.py  cppki_pb2.pyi  cppki_pb2_grpc.py  drkey_pb2.py  drkey_pb2.pyi  drkey_pb2_grpc.py  renewal_pb2.py  renewal_pb2.pyi  renewal_pb2_grpc.py  seg_extensions_pb2.py  seg_extensions_pb2.pyi  seg_extensions_pb2_grpc.py  seg_pb2.py  seg_pb2.pyi  seg_pb2_grpc.py  svc_resolution_pb2.py  svc_resolution_pb2.pyi  svc_resolution_pb2_grpc.py
python/proto/crypto/v1/: signed_pb2.py  signed_pb2.pyi  signed_pb2_grpc.py
python/proto/daemon/v1/: daemon_pb2.py  daemon_pb2_grpc.py
python/proto/discovery/v1/: discovery_pb2.py  discovery_pb2.pyi  discovery_pb2_grpc.py
python/proto/drkey/v1/: drkey_pb2.py  drkey_pb2_grpc.py
python/proto/gateway/v1/: control_pb2.py  control_pb2.pyi  control_pb2_grpc.py  prefix_pb2.py  prefix_pb2.pyi  prefix_pb2_grpc.py
python/proto/hidden_segment/v1/: hidden_segment_pb2.py  hidden_segment_pb2.pyi  hidden_segment_pb2_grpc.py
src/: bit_stream.cpp  default_address.cpp  error_codes.cpp  murmur_hash3.cpp
src/addr/: generic_ip.cpp  isd_asn.cpp
src/daemon/: client.cpp
src/path/: path.cpp  path_meta.cpp
tests/: main.cpp  test_bit_stream.cpp  utilities.cpp  utilities.hpp
tests/addr/: test_endpoint.cpp  test_generic_ip.cpp  test_isd_asn.cpp
tests/asio/: test_addresses.cpp  test_scmp_socket.cpp  test_udp_socket.cpp
tests/bsd/: test_addr.cpp  test_scmp_socket.cpp  test_udp_socket.cpp
tests/hdr/: test_checksum.cpp  test_idint.cpp  test_ip.cpp  test_scion.cpp  test_scmp.cpp
tests/hdr/data/: icmp4.py  icmp6.py  idint.py  scion.py  scion_faulty.py  scion_opts.py  scmp.py  udp_ipv4.py  udp_ipv6.py
tests/path/: test_cache.cpp  test_decoded_scion.cpp  test_path.cpp  test_path_meta.cpp  test_protobuf_time.cpp  test_raw_path.cpp
tests/path/data/: path_metadata_3hops.py  path_metadata_invalid.py  raw_path.py
tests/socket/: test_header_cache.cpp  test_packager.cpp  test_parsed_packet.cpp
tests/socket/data/: local_packet.py  packets.py  raw_path.py
